[package]
name = "dogecoin_zkp_generator_qa1"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", default-features = false, features = ["std", "print-trace"] }
hex = "0.4" # For hex encoding/decoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4" # For binary parsing of R1CS file